--- a/style.css
+++ b/style.css
@@ -524,3 +524,114 @@ span {
     font-size: 1.5rem;
 }
 
+/* Contact session */
+
+#contact {
+    margin-bottom: 3rem;
+    color: white;
+}
+
+#contact form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 3rem;
+    margin: 5rem auto;
+}
+
+#contact form .input-box {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+#contact form .input-box input,
+#contact form textarea {
+    width: 100%;
+    padding: 2.5rem;
+    margin: 1.5rem 0;
+    font-size: 1.8rem;
+    color: var(--text-color);
+    background-color: var(--second-bg-color);
+    border: 2px solid var(--main-color);
+    border-radius: 3rem;
+    resize: none;
+}
+
+#contact form textarea {
+    height: 30rem;
+}
+
+#contact form .btn {
+    margin-top: 2rem;
+}
+
+/* Footer area */
+
+.footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    padding: 40px 0;
+    background-color: var(--second-bg-color);
+}
+
+.footer .social {
+    text-align: center;
+    padding-bottom: 25px;
+    color: var(--main-color);
+}
+
+.footer .social a {
+    font-size: 25px;
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
+    width: 42px;
+    height: 42px;
+    line-height: 42px;
+    padding: 2px 0;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    margin: 0 10px;
+    transition: 0.3s ease-in-out;
+}
+
+.footer .social a:hover {
+    transform: scale(1.03)translateY(-10px);
+    background-color: var(--main-color);
+    color: black;
+    box-shadow: 0 0 25px var(--main-color);
+}
+
+.footer ul {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 0;
+    font-size: 18px;
+    line-height: 1.6;
+    text-align: center;
+}   
+
+.footer ul li a {
+    color: white;
+    border-bottom: 3px solid transparent;
+    transition: 0.3s ease-in-out;
+    margin: 0 10px;
+}
+
+.footer ul li a:hover {
+    border-bottom: 3px solid var(--main-color);
+}
+
+.footer ul li {
+    display: inline-block;
+}
+
+.copy {
+    margin-top: 50px;
+    text-align: center;
+    color: white;
+    font-size: 16px;
+}
